--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "feather-icons": "^4.24.1",
     "jquery": "^3.4.1"
   },
   "devDependencies": {
